--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "set PORT=9999 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-sw":"http-server ./build"
   },
   "eslintConfig": {
     "extends": "react-app"
