--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.12.0",
     "react-redux": "^5.0.6",
     "react-scripts": "3.2.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "webpack-dev-server": "^3.10.1"
   },
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
