--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^5.0.6",
     "react-scripts": "3.2.0",
     "redux": "^3.7.2",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
   },
   "scripts": {
