--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "concurrently": "^5.0.2",
     "express": "^4.17.1",
     "prop-types": "^15.6.0",
     "react": "^16.12.0",
