--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "concurrently": "^5.0.2",
     "express": "^4.17.1",
+    "nodemon": "^2.0.2",
     "prop-types": "^15.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
